[project]
name = "adversarial-training-demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Cylix Lee", email = "cylix.lee@outlook.com" }]
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "torchattacks>=3.5.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.uv.sources]
torch = [{ index = "PyTorch-CPU" }]
torchvision = [{ index = "PyTorch-CPU" }]

[[tool.uv.index]]
name = "PyTorch-CPU"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
